repairs background of active on tablet

--- a/app/assets/stylesheets/_ui_components.css.scss
+++ b/app/assets/stylesheets/_ui_components.css.scss
@@ -26,6 +26,7 @@
 		background: $white;
 		//letter-spacing: 0.3em;
 		@media #{$tablet}{
+			background: none;
 			//background: $black;
 			//color: $white;
 		}
